--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -1,6 +1,7 @@
 <div class="page">
 
-<div class="titles">Projects</div>
+  <!----------------------------Home---------------------------!>
+<div class="titles">[projects]</div>
 <% @examples.each do |example| %>
 
   <div class="examples">
@@ -15,9 +16,9 @@
 
 </div>
 
+<!----------------------------------Contact-------------------->
 
-
-<div class="titles">Contact</div>
+<div class="titles">[contact]</div>
 
 <h3><%= link_to "Add new example", [:new, :example] %></h3>
 
@@ -26,4 +27,5 @@ My contact info
 </p>
 </div>
 
+<!---------------------------------About----------------------->
 
