--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <div id="header">
     <div id="logo">
-      <%= link_to "Home[logo]", "/" %>
+      <%= link_to "[my_logo]", "/" %>
     </div>
 
     <div class="menu">
@@ -21,13 +21,26 @@
         <li class ="menu_link"><%= link_to "Resume", "/resume" %></li>
       </ul>
     </div>
-</div>
+
+    <div>
+
+      <% if signed_in? %>
+        <%= button_to "Sign out", :session, method: :delete %>
+    <% else %>
+        <% unless controller_name == "users" && action_name == "new" %>
+      <% end %>
+      <%= link_to "Sign up", [:new, :user] %>
+      <%= link_to "Sign in", [:new, :session] %>
+    <% end %>
+
+    </div>
+  </div>
 
 
 
 
 
-<%= yield %>
+  <%= yield %>
 </div>
 </body>
 </html>
