--- a/app/views/examples/new.html.erb
+++ b/app/views/examples/new.html.erb
@@ -13,6 +13,11 @@
       <%= form.label :url %>
       <%= form.text_field :url %>
     </div>
+    <div>
+      <%= form.label :trello %>
+      <%= form.text_field :trello %>
+    </div>
+
     <%= form.submit "Create" %>
 
   <% end %>
